# Enver

./: README.md  pyproject.toml  pytest.ini
contracts/: README.md  foundry.toml  remappings.txt
contracts/script/: 00_deploy_all.sol
contracts/src/: EnverFactory.sol  EnverRewarder.sol  EnverRouter.sol  Organization.sol
scripts/: dev.sh
src/enver_cli/: __init__.py  main.py
tests/: test_main.py
